--- a/_layouts/encuesta.html
+++ b/_layouts/encuesta.html
@@ -4,5 +4,4 @@
 	</div>
 
 	<div class="subscribe checkBox">
-<iframe src="http://www.onlineencuesta.com/votebox/vote.php?code=65a9001" width="230" height="240" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="position: relative; z-index: 100;"></iframe>
-</div>
+<iframe src="http://www.onlineencuesta.com/votebox/vote.php?code=49bbd2f" width="220" height="237" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="position: relative; z-index: 100;"></div>
