--- a/_layouts/boletin.html
+++ b/_layouts/boletin.html
@@ -1,5 +1,4 @@
 
-
 <div class="news_section">
   <div class="title">
     <h4>SUSCRIPCIÓN AL BOLETÍN</h4>
@@ -33,3 +32,4 @@
  <!-- </div> -->
  <!-- <\!-- END: Constant Contact Stylish Email Newsletter Form -\-> -->
 </div>
+<img src="http://i.imgur.com/Ku5jYyTm.jpg" alt="add" />
