--- a/_layouts/boletin.html
+++ b/_layouts/boletin.html
@@ -1,4 +1,3 @@
-
 <div class="news_section">
   <div class="title">
     <h4>SUSCRIPCIÓN AL BOLETÍN</h4>
@@ -32,4 +31,4 @@
  <!-- </div> -->
  <!-- <\!-- END: Constant Contact Stylish Email Newsletter Form -\-> -->
 </div>
-<img src="http://i.imgur.com/Ku5jYyTm.jpg" alt="add" />
+<img src="http://i.imgur.com/U5RHt0ym.jpg" alt="add" />
