--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -3,8 +3,10 @@
   <header class="header">
    <div class="addSection">
    
+   <img src="http://i.imgur.com/JTrZvco.jpg" alt="add"/>
+   
    <!--<a href="http://issuu.com/lajornadazacatecas.com.mx/docs/programa" target="_blank" >-->
-   <a href="http://www.ljz.mx/seccion/eventos.html"><img src="http://i.imgur.com/822qon5.jpg" alt="add"/></a> 
+   <!--<a href="http://www.ljz.mx/seccion/eventos.html"><img src="http://i.imgur.com/822qon5.jpg" alt="add"/></a> -->
 
 <!--<a href="http://www.ljz.mx/seccion/eventos.html"><img src="http://i.imgur.com/1EtyiGU.png" alt="add"/></a> -->
     <!-- <a href="javascript:void(0);"><img src="http://i.imgur.com/HdCK7Kl.png" alt="add"/></a> -->
