--- a/_layouts/publicidad_footer.html
+++ b/_layouts/publicidad_footer.html
@@ -1,5 +1,5 @@
  <div class="figure"> 
  
   <!-- <img src="http://i.imgur.com/DHwULnt.jpg" alt="add" />-->
- 	<img src="http://i.imgur.com/0ujxR46.jpg" alt="add" />
+ 	<img src="http://i.imgur.com/ytqtJ16.jpg" alt="add" />
  </div>
