--- a/_layouts/boletin.html
+++ b/_layouts/boletin.html
@@ -31,4 +31,4 @@
  <!-- </div> -->
  <!-- <\!-- END: Constant Contact Stylish Email Newsletter Form -\-> -->
 </div>
-<img src="http://i.imgur.com/aylqrJw.jpg" alt="add" />
+<img src="http://i.imgur.com/aylqrJwm.jpg" alt="add" />
