--- a/_layouts/publicidad3.html
+++ b/_layouts/publicidad3.html
@@ -3,13 +3,14 @@
 <a href="http://www.wearenotzombies.tv" target="_blank"><img src="http://infodem.com.mx/wanz_miercoles.gif" alt="add" /></a> 
 
 <div class="title">
-	<h4> Tacología: Torito de Oro
+	<h4> Y Tú Qué MORGAN SZYMANSKI || Ep
+
 
 </h4>
 
 <h5>Cortesía de WeAreNotZombies.tv</h5>
 </div>
-<iframe width="330" height="186" src="//www.youtube.com/embed/9uAt3PS_GgU" frameborder="0" allowfullscreen></iframe>
+<iframe width="330" height="186" src="//www.youtube.com/embed/7sksZt2D-LQ" frameborder="0" allowfullscreen></iframe>
 <a href="/seccion/Boletin.html">
 <img src="http://www.ljz.mx/Assets/images/BANNER.gif" alt="add" /></a> 
 </div>
