--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -3,7 +3,8 @@
   <header class="header">
    <div class="addSection">
    
-   <img src="http://i.imgur.com/JTrZvco.jpg" alt="add"/>
+   <!--<img src="http://i.imgur.com/JTrZvco.jpg" alt="add"/>-->
+   <img src="http://i.imgur.com/ZFZb1qC.jpg" alt="add"/>
    
    <!--<a href="http://issuu.com/lajornadazacatecas.com.mx/docs/programa" target="_blank" >-->
    <!--<a href="http://www.ljz.mx/seccion/eventos.html"><img src="http://i.imgur.com/822qon5.jpg" alt="add"/></a> -->
